# python3-cyberfusion-rabbitmq-consumer-log-server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  alembic.debian.ini  alembic.ini  alembic.local.ini  pyproject.toml  seed_example_data.py  setup.cfg
.run/: FastAPI (Uvicorn).run.xml  Template Python tests.run.xml
debian/: changelog  control  install  python3-cyberfusion-rabbitmq-consumer-log-server.cron.d  python3-cyberfusion-rabbitmq-consumer-log-server.postinst  python3-cyberfusion-rabbitmq-consumer-log-server.pydist  python3-cyberfusion-rabbitmq-consumer-log-server.sysusers  rabbitmq-consumer-log-server.service  rules
etc/cronscripts/: rabbitmq-consumer-log-server-purge-logs.cron
migrations/: env.py
migrations/versions/: 12b6fe83f584_initial_migration.py  135a47ab3f0b_initial_migration.py  7a5a16c86789_cascade_delete_rpc_responses.py  e7baf5d5b97e_initial_migration.py
requirements/: dev.txt  test.txt
src/cyberfusion/RabbitMQConsumerLogServer/: api.py  database.py  gui.py  pydantic_models.py  seeders.py  settings.py
static/: styles.css
templates/: rpc_requests_overview.html
tests/: conftest.py
tests/feature_tests/: test_api.py  test_gui.py  test_utilities.py
tests/unit_tests/: test_api.py  test_gui.py
views/: rpc_request_detail.html
