[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-rabbitmq-consumer-log-server"
version = "1.2.1"
description = "Log server for RabbitMQ consumer."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "fastapi==0.128.8",
    "pydantic==2.12.5",
    "alembic==1.18.4",
    "SQLAlchemy==2.0.46",
    "jinja2==3.1.6",
    "pydantic-settings==2.12.0",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-rabbitmq-consumer-log-server"

[project.scripts]
rabbitmq-consumer-log-server-purge-logs = "cyberfusion.RabbitMQConsumerLogServer.utilities:purge_logs"
